...
    var body: some View {
        TabView {
            NavigationStack {
                RecipeListView()
            }
            .tabItem {
                Label("Recettes", systemImage: "book")
            }
            
            NavigationStack {
                ShoppingListView()
            }
            .tabItem {
...
